k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yasssf-backend
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: yasssf-backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
