k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yasssf-frontend-service
spec:
  selector:
    app: yasssf-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
